--- a/pom.xml
+++ b/pom.xml
@@ -68,4 +68,10 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>webjars.github.com</id>
+            <url>file:///${basedir}/../webjars.github.com/m2/</url>
+        </repository>
+    </distributionManagement>
 </project>
