--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.jqueryui</groupId>
-    <artifactId>jquery.ui</artifactId>
-    <name>jquery UI</name>
-    <version>1.8.20</version>
+    
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+    
+    <groupId>org.webjars</groupId>
+    <artifactId>jquery-ui</artifactId>
+    <version>1.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <name>jQuery UI</name>
+    <description>WebJar for jQuery</description>
+    <url>http://webjars.org</url>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://github.com/jquery/jquery-ui/blob/master/MIT-LICENSE.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>http://github.com/webjars/jquery-ui</url>
+        <connection>scm:git:https://github.com/webjars/jquery-ui.git</connection>
+        <developerConnection>scm:git:https://github.com/webjars/jquery-ui.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>jamesward</id>
+            <name>James Ward</name>
+            <email>james@jamesward.org</email>
+        </developer>
+    </developers>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jqueryui.version>1.8.20</jqueryui.version>
-        <jqueryui.sourceUrl>http://jquery-ui.googlecode.com/files/</jqueryui.sourceUrl>
-        <destDir>${project.build.directory}/classes/public</destDir>
+        <jqueryui.version>1.9.0</jqueryui.version>
+        <jqueryui.sourceUrl>http://jqueryui.com/resources/download/</jqueryui.sourceUrl>
+        <destDir>${project.build.directory}/classes/META-INF/resources/webjars/jquery-ui/${jqueryui.version}</destDir>
     </properties>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>1.8.2</version>
+        </dependency>
+    </dependencies>
+    
     <build>
         <plugins>
             <plugin>
@@ -24,7 +66,7 @@
                         <goals><goal>download-single</goal></goals>
                         <configuration>
                             <url>${jqueryui.sourceUrl}</url>
-                            <fromFile>jquery-ui-${jqueryui.version}.zip</fromFile>
+                            <fromFile>jquery-ui-${jqueryui.version}.custom.zip</fromFile>
                             <toFile>${project.build.directory}/jquery-ui.zip</toFile>
                         </configuration>
                     </execution>
@@ -41,37 +83,58 @@
                         <configuration>
                             <target>
                                 <echo message="unzip archive" />
-                                <unzip src="${project.build.directory}/jquery-ui.zip" dest="${project.build.directory}/jquery-ui" />
-                                <echo message="moving javascripts resources" />
-                                <copy todir="${destDir}/javascripts" overwrite="true" verbose="true">
-                                    <resources>
-                                        <file file="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/ui/jquery-ui.js" basedir="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/ui/" />
-                                        <file file="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/ui/i18n/jquery-ui-i18n.js" basedir="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/ui/i18n/" />
-                                        <file file="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/ui/minified/jquery-ui.min.js" basedir="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/ui/minified/" />
-                                        <file file="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/ui/minified/i18n/jquery-ui-i18n.min.js" basedir="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/ui/minified/i18n/" />
-                                    </resources>
-                                </copy>
-                                <echo message="moving style resources" />
-                                <copy todir="${destDir}/css" overwrite="true" verbose="true">
-                                    <resources>
-                                        <file file="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/themes/base/jquery-ui.css" basedir="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/themes/base/" />
-                                        <file file="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/themes/base/minified/jquery-ui.min.css" basedir="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/themes/base/minified/" />
-                                    </resources>
-                                </copy>
-                                <copy todir="${destDir}/css/images" overwrite="true" verbose="true">
-                                    <fileset dir="${project.build.directory}/jquery-ui/jquery-ui-${jqueryui.version}/themes/base/images" />
-                                </copy>
+                                <unzip src="${project.build.directory}/jquery-ui.zip" dest="${project.build.directory}" />
+                                <echo message="moving resources" />
+                                <move todir="${destDir}/js">
+                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}.custom/js" />
+                                </move>
+                                <move todir="${destDir}/css">
+                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}.custom/css" />
+                                </move>
+                                <move todir="${destDir}/development-bundle">
+                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}.custom/development-bundle" />
+                                </move>
                             </target>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.3.2</version>
+            </plugin>
         </plugins>
     </build>
-    <distributionManagement>
-        <repository>
-            <id>webjars.github.com</id>
-            <url>file:///${basedir}/../webjars.github.com/m2/</url>
-        </repository>
-    </distributionManagement>
+
+    <profiles>
+        <profile>
+            <id>release-sign-artifacts</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.2</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+    
 </project>
