--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     
     <groupId>org.webjars</groupId>
     <artifactId>jquery-ui</artifactId>
-    <version>1.9.0</version>
+    <version>1.9.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>jQuery UI</name>
     <description>WebJar for jQuery</description>
@@ -28,7 +28,7 @@
         <url>http://github.com/webjars/jquery-ui</url>
         <connection>scm:git:https://github.com/webjars/jquery-ui.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/jquery-ui.git</developerConnection>
-        <tag>jquery-ui-1.9.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
