--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>jquery-ui</artifactId>
-    <version>1.10.2-1-SNAPSHOT</version>
+    <version>1.10.2-1</version>
     <name>jQuery UI</name>
     <description>WebJar for jQuery UI</description>
     <url>http://webjars.org</url>
@@ -28,7 +28,7 @@
         <url>http://github.com/webjars/jquery-ui</url>
         <connection>scm:git:https://github.com/webjars/jquery-ui.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/jquery-ui.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>jquery-ui-1.10.2-1</tag>
     </scm>
 
     <developers>
