--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>jquery-ui</artifactId>
-    <version>1.10.5-SNAPSHOT</version>
+    <version>1.10.4-1-SNAPSHOT</version>
     <name>jQuery UI</name>
     <description>WebJar for jQuery UI</description>
     <url>http://webjars.org</url>
@@ -44,13 +44,19 @@
         <jqueryui.version>1.10.4</jqueryui.version>
         <jqueryui.sourceUrl>http://jqueryui.com/resources/download/</jqueryui.sourceUrl>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${jqueryui.version}</destDir>
+        <requirejs>
+            {
+                "paths": { "jquery-ui-min": "ui/minified/jquery-ui.min" },
+                "shim": { "jquery-ui-min": [ "jquery" ] }
+            }
+        </requirejs>
     </properties>
     
     <dependencies>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
-            <version>1.9.1</version>
+            <version>1.11.1</version>
         </dependency>
     </dependencies>
     
@@ -86,10 +92,10 @@
                                 <unzip src="${project.build.directory}/jquery-ui.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}/ui">
-                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}/ui" />
+                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}/development-bundle/ui" />
                                 </move>
                                 <move todir="${destDir}/themes">
-                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}/themes" />
+                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}/development-bundle/themes" />
                                 </move>
                             </target>
                         </configuration>
