--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>jquery-ui</artifactId>
-    <version>1.10.4-2-SNAPSHOT</version>
+    <version>1.11.0-SNAPSHOT</version>
     <name>jQuery UI</name>
     <description>WebJar for jQuery UI</description>
     <url>http://webjars.org</url>
@@ -41,7 +41,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jqueryui.version>1.10.4</jqueryui.version>
+        <jqueryui.version>1.11.0</jqueryui.version>
         <jqueryui.sourceUrl>http://jqueryui.com/resources/download/</jqueryui.sourceUrl>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${jqueryui.version}</destDir>
         <requirejs>
@@ -91,11 +91,8 @@
                                 <echo message="unzip archive" />
                                 <unzip src="${project.build.directory}/jquery-ui.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
-                                <move todir="${destDir}/ui">
-                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}/development-bundle/ui" />
-                                </move>
-                                <move todir="${destDir}/themes">
-                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}/development-bundle/themes" />
+                                <move todir="${destDir}">
+                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}" excludes="external/"/>
                                 </move>
                             </target>
                         </configuration>
