--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>jquery-ui</artifactId>
-    <version>1.11.5-SNAPSHOT</version>
+    <version>1.12.0-SNAPSHOT</version>
     <name>jQuery UI</name>
     <description>WebJar for jQuery UI</description>
     <url>http://webjars.org</url>
@@ -41,9 +41,8 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jqueryui.version>1.11.4</jqueryui.version>
         <jqueryui.sourceUrl>http://jqueryui.com/resources/download/</jqueryui.sourceUrl>
-        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${jqueryui.version}</destDir>
+        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
         <requirejs>
             {
                 "paths": {
@@ -62,12 +61,26 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
-            <version>1.11.1</version>
+            <version>1.12.0</version>
         </dependency>
     </dependencies>
     
     <build>
         <plugins>
+            <plugin>
+                <groupId>com.jamesward</groupId>
+                <artifactId>unsnapshot-maven-plugin</artifactId>
+                <version>0.1</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>unsnapshot</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>wagon-maven-plugin</artifactId>
@@ -78,7 +91,7 @@
                         <goals><goal>download-single</goal></goals>
                         <configuration>
                             <url>${jqueryui.sourceUrl}</url>
-                            <fromFile>jquery-ui-${jqueryui.version}.zip</fromFile>
+                            <fromFile>jquery-ui-${version.unsnapshot}.zip</fromFile>
                             <toFile>${project.build.directory}/jquery-ui.zip</toFile>
                         </configuration>
                     </execution>
@@ -98,7 +111,7 @@
                                 <unzip src="${project.build.directory}/jquery-ui.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/jquery-ui-${jqueryui.version}" excludes="external/" />
+                                    <fileset dir="${project.build.directory}/jquery-ui-${version.unsnapshot}" excludes="external/" />
                                 </move>
                             </target>
                         </configuration>
