--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>jquery-ui</artifactId>
-    <version>1.14.1-SNAPSHOT</version>
+    <version>1.14.1</version>
     <name>jQuery UI</name>
     <description>WebJar for jQuery UI</description>
     <url>http://webjars.org</url>
@@ -28,7 +28,7 @@
         <url>http://github.com/webjars/jquery-ui</url>
         <connection>scm:git:https://github.com/webjars/jquery-ui.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/jquery-ui.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>jquery-ui-1.14.1</tag>
     </scm>
 
     <developers>
@@ -41,7 +41,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.outputTimestamp>1725508622</project.build.outputTimestamp>
+        <project.build.outputTimestamp>1734554312</project.build.outputTimestamp>
         <jqueryui.sourceUrl>http://jqueryui.com/resources/download/</jqueryui.sourceUrl>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
         <requirejs>
